--- a/template/contact.html
+++ b/template/contact.html
@@ -7,7 +7,7 @@
       <img src="/static/11.jfif" class="d-block w-100 my-0" alt="...">  
  </div>
  <div class="container mb-3">
-      <h1 style="color:black; text-align:center;">Contact Us</h1>
+      <h1 class="text-center">Contact Us</h1>
       <form method="post" action="/contact">
        {% csrf_token %}
         <div class="form-group">
